# py-bc-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.bcs/: badges.py
.github/workflows/: github.yml
docs/source/: bc_configs.configurator.md  bc_configs.environ_source.md  bc_configs.md  conf.py  for_contributing.md  index.md
src/bcf/: __init__.py
src/bcf/core/mongo/: __init__.py  async_collection.py  client.py  config.py  sync_collection.py  utils.py
tests/: conftest.py
tests/core/mongo/: __init__.py  test_async_collection.py  test_sync_collection.py  test_utils.py
